--- a/materifungsi.html
+++ b/materifungsi.html
@@ -65,11 +65,11 @@
                                  <a class="nav-link" href="about.html">About</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="about.html">Anggota Kelompok</a>
+                                 <a class="nav-link" href="#anggota">Anggota Kelompok</a>
                               </li>
-                              <li class="nav-item d_none">
+                              <!-- <li class="nav-item d_none">
                                  <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
-                              </li>
+                              </li> -->
                            </ul>
                         </div>
                      </nav>
@@ -85,7 +85,7 @@
            <div class="row">
               <div class="col-md-12">
                  <div class="titlepage">
-                  <h2>LOGIKA MATEMATIKA</h2>
+                  <h2>FUNGSI MATEMATIKA</h2>
                  </div>
               </div>
            </div>
@@ -210,7 +210,7 @@
          <!-- team -->
        <!--  footer -->
       <footer>
-         <div class="footer">
+         <div class="footer" id="anggota">
             <div class="container">
                <div class="row">
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
@@ -244,6 +244,9 @@
                         <li><a href="#">2110040</a></li>
                         <li><a href="#">2110018</a></li>
                         <li><a href="#">2110220</a></li>
+                        <li class="nav-item">
+                           <a class="nav-link" href="index.html">Back To Home..</a>
+                        </li>
                      </ul>
                   </div>
                </div>
