--- a/about.html
+++ b/about.html
@@ -65,10 +65,10 @@
                                  <a class="nav-link" href="about.html">About</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="about.html">Anggota Kelompok</a>
+                                 <a class="nav-link" href="#anggota">Anggota Kelompok</a>
                               </li>
                               <li class="nav-item d_none">
-                                 <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+                                 <a class="nav-link" href="materifungsi.html"><i class="fa fa-search" aria-hidden="true"></i></a>
                               </li>
                            </ul>
                         </div>
@@ -100,12 +100,8 @@
               
                <div class="col-md-4">
                   <div class="titlepage">
-                      <h3>Anggota Kelompok</h3>
-                     <p>Anita Meliyanti<br>
-                        Nurul Awal Delly Murti<br>
-                        Hayatun Nufus <br>
-                        Humaidi Fikri <br>
-                        Ridho Fitra Palasa <br>
+                      <h3>Logika Matematika</h3>
+                     <p>Logika matematika adalah cabang logika dan matematika yang mengandung kajian logika matematis dan aplikasi kajian ini pada bidang-bidang lain di luar matematika.
                      </p>
                     
                   </div>
@@ -121,7 +117,7 @@
          <!-- team -->
        <!--  footer -->
       <footer>
-         <div class="footer">
+         <div class="footer" id="anggota">
             <div class="container">
                <div class="row">
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
@@ -155,6 +151,9 @@
                         <li><a href="#">2110040</a></li>
                         <li><a href="#">2110018</a></li>
                         <li><a href="#">2110220</a></li>
+                        <li class="nav-item">
+                           <a class="nav-link" href="index.html">Back To Home..</a>
+                        </li>
                      </ul>
                   </div>
                </div>
