--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!-- end loader -->
       <!-- header -->
       <header>
-         <!-- header inner -->
+         <!-- navbar -->
          <div class="header">
             <div class="container">
                <div class="row">
@@ -52,12 +52,12 @@
                      </div>
                   </div>
                   <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
-                     <nav class="navigation navbar navbar-expand-md navbar-dark ">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+                     <nav class="navigation navbar navbar-expand-md navbar-dark" id="mainNav">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div class="collapse navbar-collapse" id="navbarsExample04">
-                           <ul class="navbar-nav mr-auto">
+                        <div class="collapse navbar-collapse" id="navbarResponsive">
+                           <ul class="navbar-nav ml-auto">
                               <li class="nav-item active">
                                  <a class="nav-link" href="index.html">Home</a>
                               </li>
@@ -65,10 +65,10 @@
                                  <a class="nav-link" href="about.html">About</a>
                               </li>      
                               <li class="nav-item">
-                                 <a class="nav-link" href="about.html">Anggota Kelompok</a>
+                                 <a class="nav-link" href="#anggota">Anggota Kelompok</a>
                               </li>
                               <li class="nav-item d_none">
-                                 <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+                                 <a class="nav-link" href="materifungsi.html"><i class="fa fa-search" aria-hidden="true"></i></a>
                               </li>
                            </ul>
                         </div>
@@ -76,12 +76,13 @@
                   </div>
                </div>
             </div>
+            
          </div>
       </header>
-      <!-- end header inner -->
+      <!-- end navbar -->
       <!-- end header -->
       <!-- banner -->
-      <section class="banner_main">
+      <section class="banner_main" id="home">
          <div id="banner1" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                <li data-target="#banner1" data-slide-to="0" class="active"></li>
@@ -96,7 +97,7 @@
                               <div class="text-bg">
                                  <h1>LOGIKA<br>Matematika</h1>
                                  <p>Logika matematika adalah cabang logika dan matematika yang mengandung kajian logika matematis dan aplikasi kajian ini pada bidang-bidang lain di luar matematika.</p>
-                                 <a href="#">About More </a>
+                                 <!-- <a href="materifungsi.html">About More </a> -->
                               </div>
                            </div>
                            <div class="col-md-6">
@@ -117,16 +118,17 @@
                         <div class="row d_flex">
                            <div class="col-md-6">
                               <div class="text-bg">
-                                 <h1>Fungsi <br>Matematika</h1>
-                                 <p>Fungsi dalam istilah matematika merupakan pemetaan setiap anggota sebuah himpunan kepada anggota himpunan yang lain yang dapat dinyatakan dengan lambang</p>
-                                 <a href="#">About More </a>
+                                 <h1>Fungsi <br> Matematika</h1>
+                                 <p>Fungsi dalam istilah matematika merupakan pemetaan setiap anggota sebuah himpunan kepada anggota himpunan yang lain 
+                                 yang dapat dinyatakan dengan lambang...</p>
+                                 <a href="materifungsi.html"> Baca lebih lanjut </a>
                               </div>
                            </div>
                            <div class="col-md-6">
                               <div class="text_img">
                                  <figure>
                                     <img src="images/pct.png" alt="#"/>
-                                    <h3>01</h3>
+                                    <h3>02</h3>
                                  </figure>
                               </div>
                            </div>
@@ -136,23 +138,23 @@
                </div>
               </div>
             </div>
-            <a class="carousel-control-prev" href="#banner1" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="materifungsi.html" role="button" data-slide="prev">
             <i class="fa fa-chevron-left" aria-hidden="true"></i>
             </a>
-            <a class="carousel-control-next" href="#banner1" role="button" data-slide="next">
+            <a class="carousel-control-next" href="materifungsi.html" role="button" data-slide="next">
             <i class="fa fa-chevron-right" aria-hidden="true"></i>
             </a>
          </div>
       </section>
       <!-- end banner -->
          <!-- services -->
-         <div  class="services">
+         <div  class="services" >
             <div class="container">
                <div class="row">
                   <div class="col-md-10 offset-md-1">
                      <div class="titlepage">
-                        <h2>MATERI</h2>
-                        <p>Materi logika matematika</p>
+                        <h2>Fungsi logika matematika</h2>
+                        <!-- <p>Materi logika matematika</p> -->
                      </div>
                   </div>
                </div>
@@ -160,11 +162,11 @@
                   <div class="col-md-4">
                      <div id="serv_hover"  class="services_box">
                         <i><img src="images/service1.png" alt="#"/></i>
-                        <h3>Materi 1</h3>
+                        <h3>Go to..</h3>
                         <a class="right_irro" href="materifungsi.html"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
                      </div>
                   </div>
-                  <div class="col-md-4">
+                  <!-- <div class="col-md-4">
                      <div id="serv_hover" class="services_box">
                         <i><img src="images/service1.png" alt="#"/></i>
                         <h3>Materi 2</h3>
@@ -177,14 +179,14 @@
                         <h3>Materi 3</h3>
                         <a class="right_irro" href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
                      </div>
-                  </div>
+                  </div> -->
                </div>
             </div>
          </div>
          <!-- end services -->
       <!--  footer -->
       <footer>
-         <div class="footer">
+         <div class="footer" id="anggota">
             <div class="container">
                <div class="row">
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
@@ -218,6 +220,9 @@
                         <li><a href="#">2110040</a></li>
                         <li><a href="#">2110018</a></li>
                         <li><a href="#">2110220</a></li>
+                        <li class="nav-item">
+                           <a class="nav-link" href="index.html">Back To Home..</a>
+                        </li>
                      </ul>
                   </div>
                </div>
