--- a/materifungsi.html
+++ b/materifungsi.html
@@ -100,7 +100,7 @@
               
                <div class="col-md-8">
                   <p><b>1. Definisi Fungsi</b></p>
-                  <p style="text-align: justify">Fungsi, dalam istilah matematika adalah pemetaan setiap anggota sebuah himpunan (dinamakan</br>
+                  <p style="text-align: justify">Definisi fungsi dalam istilah matematika adalah pemetaan setiap anggota sebuah himpunan (dinamakan</br>
                   sebagai domain) kepada anggota himpunan yang lain (dinamakan sebagai kodomain).<br>
                   Fungsi biasanya diberi nama seperti f, g, dan sebagainya. Dan biasa kita tulis fungsi f sebagai f: a -> B<br><br>
                   
@@ -231,7 +231,7 @@
                      <ul class="link_menu">
                         <li><a href="">Ridho Fitra Palasa</a></li>
                         <li><a href="">Hayatun nufus</a></li>
-                        <li><a href="">Delly Murti</a></li>
+                        <li><a href="">Nurul Awal Delly Murti</a></li>
                         <li><a href="">Anita Meliyanti</a></li>
                         <li><a href="">Humaidi Fikri</a></li>
                      </ul>
@@ -255,7 +255,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-10 offset-md-1">
-                        <p>© 2019 All Rights Reserved. Design by <a href="https://html.design/"> knodua.space</a></p>
+                        <p>© 2023 All Rights Reserved. Design by <a href="https://html.design/"> knodua.space</a></p>
                      </div>
                   </div>
                </div>
