--- a/materifungsi.html
+++ b/materifungsi.html
@@ -102,7 +102,8 @@
                   <p><b>1. Definisi Fungsi</b></p>
                   <p style="text-align: justify">Definisi fungsi dalam istilah matematika adalah pemetaan setiap anggota sebuah himpunan (dinamakan</br>
                   sebagai domain) kepada anggota himpunan yang lain (dinamakan sebagai kodomain).<br>
-                  Fungsi biasanya diberi nama seperti f, g, dan sebagainya. Dan biasa kita tulis fungsi f sebagai f: a -> B<br><br>
+                  Nama lain dari fungsi adalah pemetaan. Fungsi biasanya diberi nama seperti f, g, dan sebagainya.<br>
+                  Dan biasa kita tulis fungsi f sebagai f: a -> B<br><br>
                   
                   Jika a -> A maka anggota himpunan B merupakan kaitan dari a dapat ditulis sebagai f(a). Elemen f(a)<br>
                   tersebut dinamakan nilai fungsi dari a, atau peta dari a. Himpunan semua peta disebut daerah nilai<br>
@@ -166,9 +167,13 @@
                   ditetapkan untuk setiap elemen dalam A. Dengan kata lain, f : a -> B adalah suatu fungsi <br>
                   konstan jika daerah nilai dari fungsi f hanya terdiri dari satu elemen.<br> 
                   contoh 1 : <br>
-                  <!--contoh belum dibuat-->
+                  Misalkan fungsi f didefinisikan oleh diagram :<br>
+                  <img src="images/contoh1.PNG" /><br>
+                  Maka f bukan fungsi konstan karena jangkauan dari f terdiri atas 1 dan 2.<br>
                   contoh 2 : <br>
-                  <!--contoh belum dibuat-->
+                  Misalkan fungsi f didefiniskan oleh diagram :<br>
+                  <img src="images/contoh2.PNG" /> <br>
+                  Maka f adalah fungsi konstan karena 3 ditetapkan untuk setiap elemen A.<br>
                   <p><b>3. Komposisi Fungsi</b></p>
                   Anggap f : A -> B dan g : B -> C<br> 
                   Didapat fungsi baru (g o f) : A -> C<br> 
@@ -196,9 +201,10 @@
                   (f o g)  (g o f) : tidak komunikatif <br>
                   (h o g) o f = h o (g o f) : asosiatif <br>
                   <p><b>5. Fungsi Invers</b></p>
-                  1. Pengertian Invers <br>
-                  2. Menentukan Rumus Fungsi Invers<br>
-                  3. Fungsi Invers dan Fungsi Komposisi
+                  Fungsi invers atau fungsi kebalikan merupakan suatu fungsi yang berkebalikan dari fungsi asalnya.<br>
+                  Misalnya f adalah fungsi dari himpunan A ke himpunan B.<br>
+                  Fungsi f dapat direpresentasikan menggunakan diagram panah :<br>
+                  <img src="images/fungsi-invers.PNG" />   
                   </p>
                </div>
                 <div class="col-md-5 offset-md-1">
